# peruse

./: .gitignore  README.md  env.yaml  peruse  pyproject.toml
src/: peruse.py
src/peruse/: __main__.py  readers.py
