[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peruse"
version = "0.1.0"
description = "for inspecting data files from a Python prompt"
readme = "README.md"
license = "MIT"
authors = [{ name = "Fred Thomas", email = "fred.thomas@eci.ox.ac.uk" }]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "geopandas",
    "pandas",
    "pyarrow",
    "scipy",
    "xarray",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
]

